--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Estilos Generales */
+/* #region Estilos Generales */
 body {
     font-family: 'Helvetica Neue', Arial, sans-serif;
     margin: 0;
@@ -6,29 +6,20 @@ body {
     color: #333;
     background-color: #f9f9f9;
 }
+/* #endregion */
 
-/* Header */
-header {
-    background: #000;
-    color: #fff;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
-/* Footer */
+/* #region Footer */
 footer {
     background: #000;
     color: #fff;
     text-align: center;
     padding: 20px;
 }
-
+/* #endregion */
 
 
 /* #region Buttons */
-
 
 /* #region WhatsApp*/ 
 #whatsappButton {
@@ -145,11 +136,18 @@ footer {
 }
 /* #endregion */
 
-
 /* #endregion */
 
 
 /* #region Navegation Section */
+header {
+    background: #000;
+    color: #fff;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .logo img {
     height: 40px; /* Altura fija para el logo */
 }
@@ -481,7 +479,5 @@ nav {
 }
 
 /* #endregion */
-
-
 
 
